# MyWork

Basic Exercises/ADC_DMA/: .cproject  .mxproject  ADC_DMA Debug.launch  ADC_DMA.ioc
Basic Exercises/ADC_Interupt/: .cproject  .project  ADC_Interupt Debug.launch  ADC_Interupt.ioc
Basic Exercises/DAC_SineFunction_generator/: .cproject  .project  DAC_SineFunction_generator Debug.launch  DAC_SineFunction_generator.ioc
Basic Exercises/DDS_Project/: .cproject  .mxproject  .project  DDS_Project Debug.launch  DDS_Project.ioc
Basic Exercises/Modulation_AM&FM/: .cproject  .mxproject  .project  Modulation_AM Debug.launch  Modulation_AM.ioc
Basic Exercises/STM32F100-SteppermotorDriver/: Main.c  StepperDriver.uvguix.gurka  StepperDriver.uvoptx  StepperDriver.uvprojx  delay.c  delay.h
Linux/CPU Utilization Tracker/: README.md  (+5 more)
Linux/Computer Operating Systems/: CMakeLists.txt  readme.txt
Linux/Computer Operating Systems/lab10-11/: CMakeLists.txt  task53.c  task54.c
Linux/Computer Operating Systems/lab12/: CMakeLists.txt  UdpClient.c  UdpServer.c
Linux/Computer Operating Systems/lab2/: CMakeLists.txt  task11.c  task12.c  task13.c  task14.c
Linux/Computer Operating Systems/lab3/: CMakeLists.txt  task15.c  task16.c  task17.c  task18.c
Linux/Computer Operating Systems/lab4/: CMakeLists.txt  task21.c  task22.c  task23.c  task24.c
Linux/Computer Operating Systems/lab5/: CMakeLists.txt  task25.c  task26.c  task27.c  task28.c
Linux/Computer Operating Systems/lab7/: CMakeLists.txt  task41.c
Linux/Computer Operating Systems/lab8-9/: CMakeLists.txt  task51.c  task52.c
(+276 files in other folders)
